# composite-design-pattern

./: .travis.yml  CMakeLists.txt  README.md
cmake/: googletest-download.cmake
simulation/: Animation.hpp  EngineSimulation.hpp  LoopAnimation.hpp  Messages.hpp  NumberAnimation.hpp  ParallelAnimation.hpp
tests/: CMakeLists.txt  EngineSimulationUnitTests.cpp  LoopAnimationUnitTests.cpp  NumberAnimationUnitTests.cpp  ParallelAnimationUnitTests.cpp
tests/mock/: AnimationNotifier.hpp  CarSimulatorNotifier.hpp  MockAnimation.hpp  MockAnimationNotifier.hpp  MockCarSimulatorNotifier.hpp
